--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-up Form</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
@@ -13,6 +14,74 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body class="background">
+    <!--<img
+      class="background-image"
+      src="images/bg-intro-desktop.png"
+      alt="backgroung images"
+    />-->
+    <div class="container">
+      <div class="info-container">
+        <h1 class="title">Learn to code by watching others</h1>
+        <p class="informative-text">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </div>
+      <div class="info-and-form">
+        <div class="advertisement-container">
+          <p class="advertisement">
+            Try it free 7 days then $20/mo. thereafter
+          </p>
+        </div>
+        <div class="form-container">
+          <div class="input-container">
+            <input class="input-label" type="text" placeholder="First Name" />
+            <img
+              class="alert-image"
+              src="images/icon-error.svg"
+              alt="alert-image"
+            />
+          </div>
+          <p class="alert">First Name cannot be empty</p>
+          <div class="input-container">
+            <input class="input-label" type="text" placeholder="Last Name" />
+            <img
+              class="alert-image"
+              src="images/icon-error.svg"
+              alt="alert-image"
+            />
+          </div>
+          <p class="alert">Last Name cannot be empty</p>
+          <div class="input-container">
+            <input
+              class="input-label"
+              type="text"
+              placeholder="Email Address"
+            />
+            <img
+              class="alert-image"
+              src="images/icon-error.svg"
+              alt="alert-image"
+            />
+          </div>
+          <p class="alert">Email Address cannot be empty</p>
+          <div class="input-container">
+            <input class="input-label" type="email" placeholder="Password" />
+            <img
+              class="alert-image"
+              src="images/icon-error.svg"
+              alt="alert-image"
+            />
+          </div>
+          <p class="alert">Password cannot be empty</p>
+          <button class="claim-button">CLAIM YOUR FREE TRIAL</button>
+          <p class="terms-and-services">
+            By clicking the button you are agreeing to out Terms and Services
+          </p>
+        </div>
+      </div>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
