--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <div class="info-and-form">
         <div class="advertisement-container">
           <p class="advertisement">
-            Try it free 7 days then $20/mo. thereafter
+            <span class="offer">Try it free 7 days</span> then $20/mo.
+            thereafter
           </p>
         </div>
         <div class="form-container">
