--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <p class="alert">Password cannot be empty</p>
           <button class="claim-button">CLAIM YOUR FREE TRIAL</button>
           <p class="terms-and-services">
-            By clicking the button you are agreeing to out Terms and Services
+            By clicking the button you are agreeing to out
+            <span class="terms-services-select">Terms and Services</span>
           </p>
         </div>
       </div>
