--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
+  <p>ajajajajjaj</p>
   <body class="background">
-    <!--<img
-      class="background-image"
-      src="images/bg-intro-desktop.png"
-      alt="backgroung images"
-    />-->
     <div class="container">
       <div class="info-container">
         <h1 class="title">Learn to code by watching others</h1>
@@ -78,7 +74,7 @@
           <p class="alert">Password cannot be empty</p>
           <button class="claim-button">CLAIM YOUR FREE TRIAL</button>
           <p class="terms-and-services">
-            By clicking the button you are agreeing to out
+            By clicking the button you are agreeing to our
             <span class="terms-services-select">Terms and Services</span>
           </p>
         </div>
